--- a/blogproject/blogapp/templates/index.html
+++ b/blogproject/blogapp/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
+{% load humanize %}
+{% load timetemplates %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -67,7 +69,7 @@
                             <img src="{% static "img/기본이미지.jpg" %}" class="card-thumbnail-img">
                         {% endif %}
                         <div class="CardInfoBox">
-                            <p> {{ post.published_date }}</p>
+                            <p> {{ post.published_date|custom_timesince }}</p>
                             <h3>{{ post.title }}</h3>
                             <p class="SubInfo">{{ post.content|linebreaksbr|safe|truncatechars:100 }}</p>
                         </div>
