--- a/blogproject/blogapp/templates/index.html
+++ b/blogproject/blogapp/templates/index.html
@@ -76,23 +76,24 @@
                     </a>
                 </div>
             {% endfor %}
-            <div class="pagination">
-                <span class="step-links">
-                    {% if page_posts.has_previous %}
-                        <a href="?page=1" style="color: black;">&laquo; first</a>
-                        <a href="?page={{ page_posts.previous_page_number }}" style="color: black;">previous</a>
-                    {% endif %}
-                    {% if page_posts.has_next %}
-                        <a href="?page={{ page_posts.next_page_number }}" style="color: black;">next</a>
-                        <a href="?page={{ page_posts.paginator.num_pages }}" style="color: black;">last &raquo;</a>
-                    {% endif %}
-                </span>
-            </div>
-            <span class="current-page">
-                Page {{ page_posts.number }} of {{ page_posts.paginator.num_pages }}.
-            </span>
-    
+            
         </div>
+        <div class="pagination">
+            <span class="step-links">
+                {% if page_posts.has_previous %}
+                    <a href="?page=1" style="color: black;">&laquo; 처음으로</a>
+                    <a href="?page={{ page_posts.previous_page_number }}" style="color: black;">이전 페이지</a>
+                {% endif %}
+                {% if page_posts.has_next %}
+                    <a href="?page={{ page_posts.next_page_number }}" style="color: black;">다음 페이지</a>
+                    <a href="?page={{ page_posts.paginator.num_pages }}" style="color: black;">마지막 &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
+        <span class="current-page">
+            Page {{ page_posts.number }} of {{ page_posts.paginator.num_pages }}.
+        </span>
+        
         {% endautoescape %}
         
     </main>
