--- a/blogproject/blogapp/templates/index.html
+++ b/blogproject/blogapp/templates/index.html
@@ -3,6 +3,7 @@
 {% load static %}
 {% load humanize %}
 {% load timetemplates %}
+{% load extract_first_image_url %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,48 +36,58 @@
                 </div>
             </div>
         </div>
+        
         <article class="Container1">
             {% autoescape off %}
             <div class="container">
-                <div class="PostInfoBox">
-                    <h3 class="Maintitle">{{ representpost.title }}</h3>
-                    <p class="MaintitleSub">{{ representpost.content|linebreaksbr|safe|truncatechars:100 }}</p>
-                    <a href="post/{{ representpost.id }}"><button class="ReadMoreBtn">READ MORE</button></a>
-                </div>
-                <div></div>
-                <div class="ThumbnailImg">
-                    {% if representpost.image %}
-                        <img src="{{ representpost.image.url }}">
-                    {% else %}
-                        <img src="{% static "img/기본이미지.jpg" %}">
-                    {% endif %}
-                    
-                </div>
+                {% if representpost %}
+                    <div class="PostInfoBox">
+                        <h3 class="Maintitle">{{ representpost.title|truncatechars:14 }}</h3>
+                        <p class="MaintitleSub">{{ representpost.content|striptags|linebreaksbr|safe|truncatechars:100 }}</p>
+                        <a href="post/{{ representpost.id }}"><button class="ReadMoreBtn">READ MORE</button></a>
+                    </div>
+                    <div></div>
+                    <div class="ThumbnailImg">
+                        {% if representpost.image %}
+                            <img src="{{ representpost.image.url }}">
+                        {% elif representpost.content|extract_first_image_url %}
+                            <img src="{{ representpost.content|extract_first_image_url }}">
+                        {% else %}
+                            <img src="{% static "img/기본이미지.jpg" %}">
+                        {% endif %}
+                    </div>
+                {% else %}
+                <h1 style="font-size:100px; margin-top:10px"> 글을 작성해주세요 </h1>
+                {% endif %}
             </div>
             {% endautoescape %}
         </article>
+        
     </header>
 
     <main>
         {% autoescape off %}
         <div class="container">
             {% for post in page_posts %}
-                <div class="card">
-                    <a href='post/{{ post.id }}'>
+            <div class="card">
+                <a href='post/{{ post.id }}'>
+                    <div class="card-thumbnail-img">
                         {% if post.image %}
-                            <img src="{{ post.image.url }}" class="card-thumbnail-img">
+                            <img src="{{ post.image.url }}">
+                        {% elif post.content|extract_first_image_url %}
+                            <img src="{{ post.content|extract_first_image_url }}">
                         {% else %}
-                            <img src="{% static "img/기본이미지.jpg" %}" class="card-thumbnail-img">
+                            <img src="{% static "img/기본이미지.jpg" %}">
                         {% endif %}
-                        <div class="CardInfoBox">
-                            <p> {{ post.published_date|custom_timesince }}</p>
-                            <h3>{{ post.title }}</h3>
-                            <p class="SubInfo">{{ post.content|linebreaksbr|safe|truncatechars:100 }}</p>
-                        </div>
-                    </a>
-                </div>
+                    </div>
+                    <div class="CardInfoBox">
+                        <p> {{ post.published_date|custom_timesince }}</p>
+                        <h3>{{ post.title|truncatechars:14 }}</h3>
+                        <p class="SubInfo">{{ post.content|striptags|linebreaksbr|safe|truncatechars:100 }}</p>
+                    </div>
+                </a>
+            </div>
             {% endfor %}
-            
         </div>
         <div class="pagination">
             <span class="step-links">
