--- a/blogproject/blogapp/templates/write.html
+++ b/blogproject/blogapp/templates/write.html
@@ -21,11 +21,11 @@
             <div class="NavContainer">
                 <a href="/"><img src="{% static 'img/logo(white).svg' %}"></a>
                 <div class='nav-buttons'>
-                    <a href="">일상</a>
-                    <a href="">요리</a>
-                    <a href="">여행</a>
-                    <a href="">영화</a>
-                    <a href="">IT</a>
+                    <a href='/post_list/일상'>일상</a>
+                    <a href='/post_list/요리'>요리</a>
+                    <a href='/post_list/여행'>여행</a>
+                    <a href='/post_list/영화'>영화</a>
+                    <a href='/post_list/IT'>IT</a>
                     {% if user.is_authenticated %}
                         <a href="/logout"><button class='logout-button'>Logout</button></a>
                         <a href="posting"><button class='PrimaryButton'>Just Write!</button></a>
