Update forms.py, urls.py, views.py, settings.py Update index.css, navfooter.css, write.css Update index.html, post.html, write.html
이미지 복붙했을 때 사이즈 조절 하는 것 추가
조회수 세션으로 숫자 올라가게끔 수정
임시저장 기능 추가
로그인할 때 ID 쪽에 바로 입력할 수 있게 수정
글 작성 시 주제 기본적으로 전체가 선택되어 있게 수정
글을 최신순, 인기순으로 정렬할 수 있는 기능 추가
페이지 번호 css 추가 및 페이지 번호를 눌러서 이동하게 수정
urls 쪽에 app 이름 수정

--- a/blogproject/blogapp/static/css/index.css
+++ b/blogproject/blogapp/static/css/index.css
@@ -245,14 +245,53 @@ span {
 }
 
 .pagination {
-  margin-top: 20px;
-  margin-left: 111px;
-  display: flex;
-  color:#1e1e1e;
-  font-size:19px;
+  text-align: center;
 }
 
-.current-page {
-  margin-top: 10px;
-  margin-left: 111px;
+.pagination a {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  margin: 50px 2px;
+  text-decoration: none;
+  color: black;
+  border-radius: 50%;
+  text-align: center;
+}
+
+.pagination a:hover {
+  background-color: #ddd;
+}
+
+.pagination .current-page {
+  font-weight: bold;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  margin: 0 2px;
+  background-color: #007bff;
+  border: 1px solid #007bff;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+}
+
+
+.pagination a.selected {
+  font-weight: bold;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  margin: 0 2px;
+  background-color: #353535;
+  border: 1px solid #353535;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+}
+
+#sort-select {
+  margin-left : 20px;
+  margin-top : 5px;
 }
