--- a/blogproject/blogapp/templates/post.html
+++ b/blogproject/blogapp/templates/post.html
@@ -3,6 +3,7 @@
 {% load static %}
 {% load humanize %}
 {% load timetemplates %}
+{% load extract_first_image_url %}
 
 <head>
     <meta charset="UTF-8">
@@ -63,6 +64,8 @@
                       <a href='/post/{{ recommended_post.id }}'>
                         {% if recommended_post.image %}
                             <img src="{{ recommended_post.image.url }}">
+                        {% elif recommended_post.content|extract_first_image_url %}
+                            <img src="{{ recommended_post.content|extract_first_image_url }}">
                         {% else %}
                             <img src="{% static "img/기본이미지.jpg" %}">
                         {% endif %}
@@ -79,7 +82,7 @@
                 {% if user.is_authenticated %}
                 <div class="box-divider" style="gap: 10px">
                     {% comment %} 수정버튼 {% endcomment %}
-                    <a href="{% url 'blog_app:edit_post' post_id=post.id %}">
+                    <a href="{% url 'blogapp:edit_post' post_id=post.id %}">
                         <button class="edit-button">수정하기</button>
                     </a>
                     {% comment %} 삭제버튼 {% endcomment %}
@@ -123,7 +126,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>Made with<span> Django</span></p>
+            <p>Made by<span> Dojo</span></p>
         </div>
     </footer>
 </body>
