--- a/blogproject/blogapp/templates/edit_post.html
+++ b/blogproject/blogapp/templates/edit_post.html
@@ -87,7 +87,7 @@
                     <div class="box">
                         <div class="info">
                           <h2>UPLOAD INFO</h2>
-                          <p>공개여부: {% if edit_mode %}전체공개{% else %}미공개{% endif %}</p>
+                          <p>공개여부 : 공개 </p>
                         </div>
                         <div class="save-box">
                             {% comment %} <button onclick="saveDraft()" class="temp-save-button">임시저장</button> {% endcomment %}
