--- a/blogproject/blogapp/templates/edit_post.html
+++ b/blogproject/blogapp/templates/edit_post.html
@@ -8,11 +8,12 @@
 
     <link rel="stylesheet" href="{% static "css/navfooter2.css" %}">
     <link rel="stylesheet" href="{% static "css/write.css" %}">
+    <link rel="icon" href="{% static "img/favicon(sushi).png" %}" type="image/x-icon">
     <link href="
         https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
         " rel="stylesheet">
 
-    <title>블로그 게시물 수정</title>
+    <title>Edit</title>
 </head>
 
 <body>
