--- a/blogproject/blogapp/templates/index.html
+++ b/blogproject/blogapp/templates/index.html
@@ -7,9 +7,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="{% static "css/index.css" %}">
     <link rel="stylesheet" href="{% static "css/navfooter.css" %}">
+    <link rel="icon" href="{% static "img/favicon(sushi).png" %}" type="image/x-icon">
     <link href="
         https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
         " rel="stylesheet">
@@ -17,8 +18,8 @@
 
 <body>
     <header>
-        <div class="NavContainer">
-            <div class="NavBar">   
+        <div class="NavBar">
+            <div class="NavContainer">   
                 <a href="/"><img src="{% static "img/Group 1.png" %}"></a>
                 <div class='nav-buttons'>
                     <a href='/post_list/일상'>일상</a>
@@ -27,7 +28,7 @@
                     <a href='/post_list/영화'>영화</a>
                     <a href='/post_list/IT'>IT</a>
                     {% if user.is_authenticated %}
-                        <a href="/logout"><button class='PrimaryButton'>Logout</button></a>
+                        <a href="/logout"><button class='logout-button'>Logout</button></a>
                         <a href="/posting"><button class='PrimaryButton'>Just Write!</button></a>
                     {% else %}
                         <a href="/login"><button class='PrimaryButton'>Login</button></a>
