--- a/blogproject/blogapp/templates/write.html
+++ b/blogproject/blogapp/templates/write.html
@@ -5,14 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" href="{% static "img/favicon(sushi).png" %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static "css/navfooter2.css" %}">
     <link rel="stylesheet" href="{% static "css/write.css" %}">
+    
     <link href="
         https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
         " rel="stylesheet">
 
-    <title>블로그 게시물 작성</title>
+    <title>Write</title>
 </head>
 
 <body>
