--- a/blogproject/blogapp/templates/login.html
+++ b/blogproject/blogapp/templates/login.html
@@ -5,11 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{% static "img/favicon(sushi).png" %}" type="image/x-icon">
     <link href="
         https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
         " rel="stylesheet">
     <link rel="stylesheet" href="{% static "css/login.css" %}">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
     {% block content %}
