--- a/blogproject/blogapp/templates/post.html
+++ b/blogproject/blogapp/templates/post.html
@@ -8,7 +8,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Post</title>
+    <link rel="icon" href="{% static "img/favicon(sushi).png" %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/post.css' %}">
     <link rel="stylesheet" href="{% static 'css/navfooter2.css' %}">
     <link href="
