--- a/blogproject/blogapp/templates/register.html
+++ b/blogproject/blogapp/templates/register.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{% static "img/favicon(sushi).png" %}" type="image/x-icon">
     <link href="
         https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
         " rel="stylesheet">
-    <title>signup</title>
+    <title>Signup</title>
 </head>
 <body>
     {% block content %}
