--- a/blogproject/blogapp/templates/write.html
+++ b/blogproject/blogapp/templates/write.html
@@ -89,7 +89,7 @@
                           <h2>UPLOAD INFO</h2>
                           <p>공개여부: {% if edit_mode %}전체공개{% else %}미공개{% endif %}</p>
                         </div>
-                        <a href="" onclick="openPopup()">임시저장 리스트</a>
+                        <a onclick="openPopup()" style="cursor: pointer; text-decoration:underline;">임시저장 리스트</a>
                         <div class="save-box">
                             <button type="submit" class="temp-save-button" name='temp-save-button'>임시저장</button>
                             <button type="submit" class="save-button">글 작성</button>
